# satellite-surface-algae-detection

./: .gitattributes  .gitignore  .gitmodules  README.md  TFM.tex  crop_roi.ipynb  finetune.ipynb  finetune_eurosat-linear.ipynb  finetune_eurosat.ipynb  finetune_mat-linear.ipynb  finetune_mat.ipynb  processing.py  pyproject.toml  rasterize_roi.py  refs.bib  requirements.txt  visualize.ipynb  visualize.py
dataset/: DATOS_12_04_23.csv  sample_data.py
dataset/EuroSAT/: generate_train_test_split.py  reader.py  visualize.py
dataset/algae/: reader.py  sample_data.py
dataset/algae/raw_data/: DATOS_27_05_23.csv
dataset/raw_data/: DATOS_12_04_23.csv
inference/: run-eurosat.ipynb  run.ipynb  run.py
models/: resnet.py
scripts/: download.py
train/: model.py
train/barlowtwins/: barlowtwins.py  data_augmentation.py  license.txt  train.py
train/barlowtwins/transforms/: custom.py
utils/: bands.py
