[tool.poetry]
name = "satellite-surface-algae-detection"
version = "0.1.0"
description = ""
authors = ["Esteve Soria <esofabian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vissl = {path = "vissl"}

sentinelsat = "^1.2.1"
eoreader = "^0.19.4"
numpy = "^1.23.1"
pandas = "^1.4.3"
geopandas = "^0.12.2"

hvplot = "^0.8.3"
rasterio = "^1.3.6"
matplotlib = "^3.7.1"
shapely = "^2.0.1"
xarray = "^2023.4.0"
torch = "^2.0.1"
Pillow = "^9.5.0"
torchvision = "^0.15.2"
geoviews = "^1.10"
pyproj = "^3.6.0"
cartopy = "0.22.0"
opencv-python = "^4.8.0"

#AMAZON WE HATE YOU
boto3 = "1.28.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
